# MobileAPP

./: .bazelrc  .gitignore  BUILD  MODULE.bazel
App/Mobile/: BUILD
App/Mobile/Resources/: Localizable.strings
App/Mobile/Sources/: App.swift  ContentView.swift  Data.swift
CartModule/: BUILD
CartModule/Sources/: CartView.swift
UserModule/: BUILD
UserModule/Sources/ViewModels/: User.swift  UserAuthViewModel.swift
