###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
# load  rules about how to deal with the project
bazel_dep(name = "rules_apple", version = "3.6.0")
bazel_dep(name = "rules_swift", version = "1.18.0")
# bazel_dep(name = "rules_swift", version = "2.0.0-rc1")
bazel_dep(name = "rules_xcodeproj", version = "2.4.0")
bazel_dep(name = "rules_swift_package_manager", version = "0.34.0")
bazel_dep(name = "gazelle", version = "0.37.0")


